--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_dialog_email"
-            tools:ignore="MissingConstraints"/>
+            app:maxImageSize="56dp"
+            app:backgroundTint="@color/transparent"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
